--- a/food_lab(customer)/public/css/customerEditProfile.css
+++ b/food_lab(customer)/public/css/customerEditProfile.css
@@ -199,7 +199,7 @@ body {
         height: 6vh;
         background-color: var(--primary-color);
         color: white;
-        font-size: 0.8rem;
+        font-size: 1em;
         font-weight: 500;
         margin-left: 2%;
     }
@@ -208,7 +208,7 @@ body {
         height: 6vh;
         background-color: white;
         color: var(--primary-color);
-        font-size: 0.8rem;
+        font-size: 1em;
         font-weight: 500;
     }
     .editButton {
