--- a/food_lab(customer)/public/css/commonCustomer.css
+++ b/food_lab(customer)/public/css/commonCustomer.css
@@ -155,12 +155,14 @@ marquee {
     }
     #informAlert {
         width: 91.5%;
-        margin-top: 45vh;
-        margin-left: auto;
-        margin-left: 3%;
+        /* margin-top: 45vh;
+        /* margin-left: auto; */
+        /* margin-left: 3%; */
+        /*margin-right: 30vw; */
+        left: 16vw;
     }
     .imageNews {
-        width: 15%;
+        width: 11%;
     }
     .forNews,
     .forMessages,
@@ -341,13 +343,13 @@ marquee {
     position: absolute;
     z-index: 999;
     /* width: 54.5vh; */
-    width: 30%;
+    width: 30vw;
     /* height: fit-content; */
 
     background-color: #333333;
     /* margin-left: 52.1vw; */
-    margin-top: 13vh;
-    left: 54.4vw;
+    margin-top: 4vh;
+    margin-left: -11.5vw;
     border-radius: 1.4vh;
     display: none;
 }
@@ -390,7 +392,7 @@ marquee {
     width: 3vh;
     height: 3vh;
     position: absolute;
-    top: -17%;
+    top: -18%;
     border-radius: 0.3vw;
     transform: rotate(45deg);
 }
@@ -402,10 +404,17 @@ marquee {
     position: relative;
     gap: 4vw;
 }
-
+.fontSizeForInform {
+    font-size: 0.95rem;
+}
+.fontSizeForMessage {
+    font-size: 0.85rem;
+}
 .infromTitle {
     cursor: pointer;
-    margin-top: 1vh;
+    margin-top: 2vh;
+    font-size: 0.95rem;
+    z-index: 99 !important;
     color: whitesmoke;
 }
 
@@ -481,7 +490,7 @@ marquee {
 }
 .showAllNewsText {
     color: #e4d5d5;
-    font-size: large;
+    font-size: small;
     margin-bottom: 2vh;
     width: fit-content;
     margin-left: auto;
