--- a/food_lab(customer)/public/css/customerProduct.css
+++ b/food_lab(customer)/public/css/customerProduct.css
@@ -88,9 +88,8 @@ input[list]
 {
     margin-left:auto;
     margin-right:auto;
-    max-width: 500px;
-    background: #D2E9FF;
-    padding: 20px 20px 20px 20px;
+    /* background: #D2E9FF; */
+    padding: 15px 15px 15px 15px;
     font: 14px Arial, Helvetica, sans-serif;
 
 }
