--- a/food_lab(customer)/public/css/commonCustomer.css
+++ b/food_lab(customer)/public/css/commonCustomer.css
@@ -440,11 +440,13 @@ marquee {
 }
 
 .green {
-    background-color: green;
+    background-color: #198754;
 }
-
+.waiting {
+    background-color: #ffc107;
+}
 .yellow {
-    background-color: rgb(163, 120, 3);
+    background-color: #0d6efd;
 }
 
 .red {
@@ -452,9 +454,22 @@ marquee {
 }
 
 .gray {
-    background-color: gray;
+    background-color: #6c757d;
 }
-
+.newsLine {
+    width: 0.5vw;
+    height: 60%;
+    background-color: #db0202;
+    position: absolute;
+    right: 0px;
+    gap: 0px;
+    font-size: small;
+}
+.titleStatus {
+    text-shadow: -1px 1px 1px #000, 1px 1px 1px #000, 1px -1px 1px #000,
+        -1px -1px 1px #000;
+    letter-spacing: 1px;
+}
 .visible {
     display: block !important;
 }
