--- a/food_lab(customer)/public/css/customer.css
+++ b/food_lab(customer)/public/css/customer.css
@@ -156,12 +156,12 @@
     border-radius: 20px;
 }
 
-.seller-headers {
+.seller-headers,.delivery-headers img{
     width: 30%;
     margin: 30px 0;
 }
 
-.seller-headers img {
+.seller-headers img{
     width: 100%;
 }
 
@@ -207,14 +207,6 @@
     overflow-x: hidden;
 }
 
-.del-infos {
-    color: var(--primary-color);
-    font-size: 2.5rem;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-}
-
-
 /*start delivery Informaiton*/
 
 .del-headers {
@@ -234,9 +226,6 @@
 /*end delivery Informaiton*/
 
 @media (max-width: 720px) {
-    .del-infos {
-        font-size: 1.8rem;
-    }
     .del-headers {
         font-size: 1.4rem;
     }
@@ -244,7 +233,7 @@
     .prices {
         font-size: 0.9rem;
     }
-    .seller-headers {
+    .seller-headers,.delivery-headers img{
         width: 40%;
     }
 }
@@ -256,14 +245,8 @@
 /*Start Contact Section */
 
 .contacts {
-    min-height: 100vh;
     color: var(--text-color);
-    background-image: url("/img/bg4.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     font-weight: bold;
-    overflow-x: hidden;
 }
 
 .company-infos p.fw-bolder {
