--- a/food_lab(customer)/public/css/customerProduct.css
+++ b/food_lab(customer)/public/css/customerProduct.css
@@ -100,6 +100,11 @@ datalist{
 }
 #form1{
     border-radius: 0rem 0.25rem 0.25rem 0rem !important;
+    width: 115% !important;
+}
+
+.custombtn{
+    width: 65px;
 }
 .custombtn:focus,#form1:focus,#form1:active{
     outline: none !important;
@@ -108,32 +113,27 @@ datalist{
 
 #selectpicker1 {
     /* min-width: 20%; */
+    width: 13vw;
+    height: 7.5vh;
+    font-size: 1rem;
+   
     font-weight: bold;
-    color: var(--text-color);
-    font-size: 1.6rem;
-    margin: auto;
-    border: 1px solid var(--product-color);
-    background: var(--bg2-color);
+    color: var(--text-color2);
+    border: 1px solid var(--bg-color);
+    background: var(--text-color);
 }
 
-.selectpicker1 {
-    /* min-width: 20%; */
-    font-weight: bold;
-    color: var(--text-color);
-    font-size: 1.3rem;
-    margin: auto;
-    border: 1px solid var(--product-color);
-    background: var(--bg2-color);
-}
 
 #selectpicker2 {
     /* min-width: 50%; */
+    width: 13vw;
+    height: 7.5vh;
+    font-size: 1rem;
+   
     font-weight: bold;
-    color: var(--text-color);
-    font-size: 1.6rem;
-    margin: auto;
-    border: 1px solid var(--product-color);
-    background: var(--bg2-color);
+    color: var(--text-color2);
+    border: 1px solid var(--bg-color);
+    background: var(--text-color);
 }
 
 .special {
@@ -258,6 +258,149 @@ datalist{
     border: none;
  }
 
+
+.loader {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    display: none;
+  }
+  
+  .duo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50px;
+    background: hsla(0, 0%, 0%, 0.0); 
+  }
+
+  .dot {
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+    border-radius: 10px;
+    background: whitesmoke;
+    animation-name: lighting;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-duration: 1.3s;
+    animation-iteration-count: infinite;
+  }
+  
+  .dot-a{
+    animation-delay: 0s;
+  }
+
+   .dot-b{
+   width: 10px;
+   height: 10px;
+    animation-delay: 0.5s;
+    
+  }
+
+  .dot-c{
+    width: 12px;
+    height: 12px;
+    animation-delay: 1s;
+    
+    }
+
+  .dot-d{
+   width: 14px;
+   height: 14px;
+    animation-delay: 1.5s;
+   }
+  
+  @keyframes lighting{
+      0%{ 
+        opacity: 1;
+        transform: scale(0.5);
+        }
+     49%{
+         opacity: 0;
+         transform: scale(0.8);
+     }
+     50%{
+         opacity: 1;
+         transform: scale(1);
+     }
+     100%{
+         opacity: 1;
+         transform: scale(1.3);
+     }
+  }
+
+
+  body {
+  background: #ccc;
+}
+
+.loading{
+    display: none;
+}
+.spinner {
+    display: inline-block;
+    
+    -webkit-animation: spin 2s infinite linear;
+            animation: spin 2s infinite linear;
+            font: 0/0 a;
+            color: trasparent;
+            text-shadow: none;
+            background-color: transparent;
+            border: 0;
+            content: '';
+            display: block;
+            font-size: 10px;
+            width: 0.5em;
+            height: 0.5em;
+            margin-top: 0;
+            border-radius: 1em;
+            -webkit-box-shadow: rgba(255,255, 255, 0.75) 1.5em 0 0 0, 
+                                rgba(255,255, 255, 0.75) 1.1em 1.1em 0 0, 
+                                rgba(255,255, 255, 0.75) 0 1.5em 0 0, 
+                                rgba(255,255, 255, 0.75) -1.1em 1.1em 0 0, 
+                                rgba(255,255, 255, 0.5) -1.5em 0 0 0, 
+                                rgba(255,255, 255, 0.5) -1.1em -1.1em 0 0, 
+                                rgba(255,255, 255, 0.75) 0 -1.5em 0 0, 
+                                rgba(255,255, 255, 0.75) 1.1em -1.1em 0 0;
+            box-shadow: rgba(255,255, 255, 0.75) 1.5em 0 0 0, 
+            rgba(255,255, 255, 0.75) 1.1em 1.1em 0 0, 
+            rgba(255,255, 255, 0.75) 0 1.5em 0 0, 
+            rgba(255,255, 255, 0.75) -1.1em 1.1em 0 0, 
+            rgba(255,255, 255, 0.5) -1.5em 0 0 0, 
+            rgba(255,255, 255, 0.5) -1.1em -1.1em 0 0, 
+            rgba(255,255, 255, 0.75) 0 -1.5em 0 0, 
+            rgba(255,255, 255, 0.75) 1.1em -1.1em 0 0;
+            position: absolute;
+            /* top: 42%;
+            
+            left: 100%; */
+            
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+
 @media only screen and (max-width: 720px) {
     .recommends {
         width: 80%;
@@ -301,9 +444,40 @@ datalist{
         border: 1px solid var(--product-color);
     }
 
+    #selectpicke1 {
+        width: 43vw;
+        height: 7.5vh; 
+    }
+
+    #selectpicke2 {
+        width: 43vw;
+        height: 7.5vh; 
+    }
+
+    .spinner{
+        position: absolute;
+        top: 8.5%;
+        left: 85%;
+        /* top:  45%;
+        left: 90%; */
+    }
+
+    #form1{
+        /* position: relative; */
+        width: 100% !important;
+    }
+
+   
+
     
    
 
     
 
+
+
 }
+  
+  
+ 
+ 
