--- a/food_lab(customer)/public/css/commonCustomer.css
+++ b/food_lab(customer)/public/css/commonCustomer.css
@@ -37,7 +37,7 @@ body {
 /*Start Header*/
 
 .headers {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* background-image: url("/img/Home.png"); */
     background-size: cover;
     background-repeat: no-repeat;
@@ -543,7 +543,7 @@ marquee {
 .tracks {
     position: relative;
     width: 100%;
-    height: 15vh;
+    /* height: 15vh; */
     margin: auto;
     cursor: pointer;
     color: rgb(218, 218, 221);
