--- a/food_lab(customer)/public/css/customer.css
+++ b/food_lab(customer)/public/css/customer.css
@@ -32,7 +32,6 @@
     color: var(--text-color);
     border: 2px groove transparent;
     font-weight: bold;
-    float: right;
 }
 
 .delivery-btns:hover {
@@ -946,9 +945,12 @@ text-align: center;
 }
 
 .slidertx{
-    background-color: #2d2d2d;
-    opacity: 0.7;
+    background-color: rgba(45, 45, 45, 0.7);
     border-radius: 12px;
 }
 
+.carousel-indicators > button{
+    background-color: var(--primary-color) !important;
+    height: 5px  !important;
+}
 
