--- a/food_lab(customer)/public/css/customerProduct.css
+++ b/food_lab(customer)/public/css/customerProduct.css
@@ -525,4 +525,12 @@ a > .moredetail{
 
 }
 
+ .shopcart{
+    
+    border: none;
+    background: transparent;
+    color: #fff;
+    font-weight: bold;
+ }
+
 
